Dodanie probnych elementow

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -17,7 +17,22 @@
 </head>
 
 <body>
- 
+
+    <div class="container">
+
+        <div class="items">
+            <div class="item">Lorem ipsum dolor sit.</div>
+            <div class="item">Lorem ipsum dolor sit.</div>
+            <div class="item">Lorem ipsum dolor sit.</div>
+        </div>
+        <div class="mainMenu">
+            <div id="addButton">dodaj</div>
+            <div id="saveButton">zapisz</div>
+        </div>
+
+    </div>
+
+
 </body>
 
 </html>
