Zmiana tekstu w przyciskach menu

--- a/WebContent/html/index.html
+++ b/WebContent/html/index.html
@@ -26,8 +26,8 @@
             <div class="item">Lorem ipsum dolor sit.</div>
         </div>
         <div class="mainMenu">
-            <div id="addButton">dodaj</div>
-            <div id="saveButton">zapisz</div>
+            <div id="addButton">Dodaj roślinę</div>
+            <div id="saveButton">Zapisz zmiany</div>
         </div>
 
     </div>
