--- a/WebContent/html/index.html
+++ b/WebContent/html/index.html
@@ -20,15 +20,41 @@
 
     <div class="container">
 
-        <div class="items">
-            <div class="item">Lorem ipsum dolor sit.</div>
-            <div class="item">Lorem ipsum dolor sit.</div>
-            <div class="item">Lorem ipsum dolor sit.</div>
-        </div>
         <div class="mainMenu">
             <div id="addButton">Dodaj roślinę</div>
             <div id="saveButton">Zapisz zmiany</div>
         </div>
+       
+        <div class="items">
+            <div class="item">
+                <div class="name">nawza</div>
+                <div class="action">cz1</div>
+                <div class="action">cz2</div>
+                <div class="action">cz3</div>
+                <div class="action">cz4</div>
+                <div class="action">cz5</div>
+                <div class="info">info</div>
+            </div>
+             <div class="item">
+                <div class="name">nawza</div>
+                <div class="action">cz1</div>
+                <div class="action">cz2</div>
+                <div class="action">cz3</div>
+                <div class="action">cz4</div>
+                <div class="action">cz5</div>
+                <div class="info">info</div>
+            </div>
+             <div class="item">
+                <div class="name">nawza</div>
+                <div class="action">cz1</div>
+                <div class="action">cz2</div>
+                <div class="action">cz3</div>
+                <div class="action">cz4</div>
+                <div class="action">cz5</div>
+                <div class="info">info</div>
+            </div>
+        </div>
+       
 
     </div>
 
