Stworzony wygląd przycisków "addButton" i "saveButton"

--- a/WebContent/html/index.html
+++ b/WebContent/html/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Mikołaj Chojnacki">
 
     <link rel="stylesheet" href="../css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
 
     <title>Mikołaj Chojnacki</title>
@@ -24,7 +25,7 @@
             <div id="addButton">Dodaj roślinę</div>
             <div id="saveButton">Zapisz zmiany</div>
         </div>
-       
+
         <div class="items">
             <div class="item">
                 <div class="name">nawza</div>
@@ -35,7 +36,7 @@
                 <div class="action">cz5</div>
                 <div class="info">info</div>
             </div>
-             <div class="item">
+            <div class="item">
                 <div class="name">nawza</div>
                 <div class="action">cz1</div>
                 <div class="action">cz2</div>
@@ -44,7 +45,7 @@
                 <div class="action">cz5</div>
                 <div class="info">info</div>
             </div>
-             <div class="item">
+            <div class="item">
                 <div class="name">nawza</div>
                 <div class="action">cz1</div>
                 <div class="action">cz2</div>
@@ -54,7 +55,7 @@
                 <div class="info">info</div>
             </div>
         </div>
-       
+
 
     </div>
 
