Stworzenie rozłożenia elementów  bloku "items". Dodanie hover dla przycisku info w pliku css.

--- a/WebContent/html/index.html
+++ b/WebContent/html/index.html
@@ -37,7 +37,7 @@
                 <div class="info">info</div>
             </div>
             <div class="item">
-                <div class="name">nawza</div>
+                <div class="action">nawza</div>
                 <div class="action">cz1</div>
                 <div class="action">cz2</div>
                 <div class="action">cz3</div>
