Stworzono wygląd elementów "item"

--- a/WebContent/html/index.html
+++ b/WebContent/html/index.html
@@ -28,7 +28,18 @@
 
         <div class="items">
             <div class="item">
-                <div class="name">nawza</div>
+                <div class="name black">nawza</div>
+                <div class="action green">data1</div>
+                <div class="action orange">data2</div>
+                <div class="action red">data3</div>
+                <div class="action black">
+                    <!-- puste bo nie dotyczy-->
+                </div>
+                <div class="action red">data4</div>
+                <div class="info">info</div>
+            </div>
+            <div class="item">
+                <div class="name black">nawza</div>
                 <div class="action">cz1</div>
                 <div class="action">cz2</div>
                 <div class="action">cz3</div>
@@ -37,16 +48,7 @@
                 <div class="info">info</div>
             </div>
             <div class="item">
-                <div class="action">nawza</div>
-                <div class="action">cz1</div>
-                <div class="action">cz2</div>
-                <div class="action">cz3</div>
-                <div class="action">cz4</div>
-                <div class="action">cz5</div>
-                <div class="info">info</div>
-            </div>
-            <div class="item">
-                <div class="name">nawza</div>
+                <div class="name black">nawza</div>
                 <div class="action">cz1</div>
                 <div class="action">cz2</div>
                 <div class="action">cz3</div>
