--- a/WebContent/html/index.html
+++ b/WebContent/html/index.html
@@ -25,7 +25,26 @@
             <div id="addButton">Dodaj roślinę</div>
             <div id="saveButton">Zapisz zmiany</div>
         </div>
-
+        
+        <div class="legend">
+            <div class="legendItem">
+                <div class="colorDiv green"></div>
+                  - wykonano
+            </div>
+            <div class="legendItem">
+                <div class="colorDiv red"></div>
+                  - wykonać
+            </div>
+            <div class="legendItem">
+                <div class="colorDiv black"></div>
+                  - nie dotyczy
+            </div>
+            <div class="legendItem">
+                <div class="colorDiv orange"></div>
+                  - do zapisu
+            </div>
+        </div>
+        
         <div class="items">
             <div class="item">
                 <div class="name black">nawza</div>
